medicineの修正
